2014-06-04  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* xetex.web: Remove unused variables k,and l from function
	get_strings_started, and q, and r from procedure
	set_math_char().

2014-05-10  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* image/bmpimage.c: Error exit instead of crashing for unsupported
	bmp in bmp_scan_file().

2014-04-28  TANAKA Takuji  <KXD02663@nifty.ne.jp>

	* XeTeX_ext.c: Accept Ctrl+Z as EOF in console (keyboard).
	(Windows only)

2014-03-17  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* XeTeXFontInst.cpp, XeTeXFontInst_Mac.cpp, XeTeXFontMgr.cpp,
	XeTeXFontMgr_FC.cpp, XeTeXLayoutInterface.cpp, XeTeXOTMath.cpp,
	hz.cpp, pdfimage.cpp: <w2c/config.h> is now C++ safe.

	* XeTeXFontMgr.cpp, XeTeXLayoutInterface.cpp, XeTeXOTMath.cpp,
	hz.cpp: Move extern declarations from the Pascal/WEB side ...
	* XeTeX_web.h (new): ... to here.
	* am/xetex.am: Add the new file.

2014-02-08  TANAKA Takuji  <KXD02663@nifty.ne.jp>

	* XeTeX_ext.h: Display output of Unicode characters
	on console. (Windows only)

2014-01-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	TeX tuneup of 2014.
	* xetex.web: Adapt to TeX Version 3.14159265.

2014-01-17  TANAKA Takuji  <KXD02663@nifty.ne.jp>

	* XeTeX_ext.c, xetex.h: Accept Unicode characters from STDIN
	on console. (Windows only)

2013-12-06  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* XeTeX_ext.c: Remove unused variables.
	'i' in read_tag_with_param(const char* cp, int* param), and
	'x', 'y' in a block if (fontarea[f] == OTGR_FONT_FLAG) {
	in measure_native_node(void* pNode, int use_glyph_metrics).

2013-12-05  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* XeTeX_ext.c: Rewrite command line for popen(). Windows only.

2013-09-25  Karl Berry  <karl@tug.org>

	* xetexextra.h (BANNER),
	* am/xetex.am (xetex_cppflags): remove XETEX_BUILD_DATE,
	so we have reproducible binaries again.  (Change already made
	upstream.)

2013-07-02  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* XeTeX_ext.c: Undefine timezone before reading time.h for MSVC.